<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="4dp"
        android:elevation="8dp"
        android:visibility="visible"
        app:cardElevation="8dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="78dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp">

            <TextView
                android:id="@+id/subDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="2dp"
                android:text="@string/date"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/subName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="2dp"
                android:layout_toStartOf="@+id/subDate"
                android:maxLength="20"
                android:maxLines="1"
                android:text="@string/subscription"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/subCharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/subDate"
                android:layout_marginRight="2dp"
                android:text="@string/monthly_charge"
                android:textAlignment="textEnd"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/subComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/subName"
                android:layout_marginLeft="2dp"
                android:layout_toStartOf="@+id/subCharge"
                android:gravity="center_vertical"
                android:maxLength="30"
                android:maxLines="1"
                android:text="@string/comment"
                android:textSize="14sp"
                android:textStyle="italic" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>